--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +39,18 @@
             android:exported="true"/>
         <activity
             android:name=".SelectTeamActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".TopScorersActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".AssistLeadersActivity"
             android:exported="true"/>
 
 
