--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-alias(libs.plugins.android.application) apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.7.3' // Последняя версия Gradle
+        classpath 'com.google.gms:google-services:4.4.0' // <-- classpath должен быть здесь!
+    }
+}
+
+
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
