--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -24,9 +24,6 @@
 
         <activity
             android:name=".StandingsActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".NewsActivity"
             android:exported="true"/>
         <activity
             android:name=".TransfersActivity"
@@ -52,9 +49,22 @@
         <activity
             android:name=".AssistLeadersActivity"
             android:exported="true"/>
+        <activity
+            android:name=".LineupActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".MatchStatsActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".UsernameActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".PredictionActivity"
+            android:exported="true"/>
 
 
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 </manifest>
