--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <activity
             android:name=".PredictionActivity"
             android:exported="true"/>
+        <activity
+            android:name=".UserActivity"
+            android:exported="true"/>
 
 
     </application>
