--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation libs.firebase.storage
+    implementation libs.firebase.messaging
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
     implementation 'com.sun.mail:android-mail:1.6.7'
