--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
+        android:name=".FootzoneApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -24,51 +28,56 @@
 
         <activity
             android:name=".StandingsActivity"
-            android:exported="true"/>
-
+            android:exported="true"  />
         <activity
             android:name=".SquadActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ChatActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".SelectTeamActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".TopScorersActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".AssistLeadersActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".LineupActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".MatchStatsActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".UsernameActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".PredictionActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".UserActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".LeaderboardActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
+        <!-- Firebase Messaging Service -->
+        <service
+            android:name="com.google.firebase.messaging.FirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 </manifest>
