--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'org.json:json:20231013'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.core:core:1.15.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.core:core:1.15.0' // For NestedScrollView
